--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -89,8 +89,7 @@
 html {
   height: var(--full-height);
 
-  font-family: "Noto Sans SC", "SF Pro SC", "SF Pro Text", "SF Pro Icons",
-    "PingFang SC", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  font-family: "Open+Sans","Helvetica", "Arial", sans-serif;
 }
 
 body {
